[gd_scene load_steps=12 format=3 uid="uid://d7nwbidoa28l"]

[ext_resource type="Script" path="res://scripts/entities/combat_entity.gd" id="1_a4q2m"]
[ext_resource type="Texture2D" uid="uid://dhp4ijkds4wlg" path="res://assets/sprites/ui/bar/hp_under.png" id="2_rsphg"]
[ext_resource type="Texture2D" uid="uid://df5he8su6yxak" path="res://assets/sprites/ui/bar/hp_over.png" id="3_tlqsq"]
[ext_resource type="Texture2D" uid="uid://cbmr8dus2gpjq" path="res://assets/sprites/ui/bar/hp_progress_player.png" id="4_eelhu"]
[ext_resource type="Script" path="res://scripts/components/health_bar_component.gd" id="5_comp1"]
[ext_resource type="Script" path="res://scripts/components/targeting_system.gd" id="6_comp2"]
[ext_resource type="Script" path="res://scripts/components/combat_feedback.gd" id="7_comp3"]
[ext_resource type="Script" path="res://scripts/components/hurtbox_component.gd" id="8_comp4"]
[ext_resource type="Script" path="res://scripts/components/melee_hitbox_component.gd" id="9_comp5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_body"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hurtbox"]
radius = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_attack"]
radius = 20.0

[node name="Fighter" type="CharacterBody2D"]
script = ExtResource("1_a4q2m")

[node name="Visual" type="AnimatedSprite2D" parent="."]

[node name="BodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_body")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
monitoring = true
monitorable = true
script = ExtResource("8_comp4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_hurtbox")

[node name="AttackHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false
script = ExtResource("9_comp5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
shape = SubResource("CircleShape2D_attack")

[node name="HealthBarGhost" type="TextureProgressBar" parent="."]
z_index = 100
offset_left = -16.0
offset_top = -30.0
offset_right = 16.0
offset_bottom = -24.0
step = 0.1
value = 100.0
texture_under = ExtResource("2_rsphg")
texture_over = ExtResource("3_tlqsq")
texture_progress = ExtResource("4_eelhu")

[node name="HealthBar" type="TextureProgressBar" parent="."]
z_index = 100
offset_left = -16.0
offset_top = -30.0
offset_right = 16.0
offset_bottom = -24.0
step = 0.1
value = 100.0
texture_under = ExtResource("2_rsphg")
texture_over = ExtResource("3_tlqsq")
texture_progress = ExtResource("4_eelhu")

[node name="HealthBarComponent" type="Node" parent="."]
script = ExtResource("5_comp1")
ftl_delay = 0.15
ftl_catchup_time = 0.35

[node name="TargetingSystem" type="Node" parent="."]
script = ExtResource("6_comp2")

[node name="CombatFeedback" type="Node" parent="."]
script = ExtResource("7_comp3")
